--- a/css/index.css
+++ b/css/index.css
@@ -433,21 +433,12 @@ video {
   background-size:cover; 
 }
 
-@media only screen and (min-width: 720px) and (max-width: 800px) {
+@media only screen and (min-width: 350px) and (max-width: 450px) {
   h1 img {
-    width: 37vw;
-    margin-top: -9.5vh;
+    width: 57vw;
+    margin-top: -10.5vh;
     position: absolute;
-    margin-left: 26vw;
-}
-
-.square {
-  width: 40vw;
-  height: 40vw;
-  background-color: white;
-  margin: 1vw;
-  border-radius: 2.6041666666666665vw;
-  box-shadow: 0 20px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 17vw;
 }
 
 .container {
@@ -455,6 +446,111 @@ video {
   flex-direction: column;
   float: right;
   margin-top: 20vw;
-  margin-right: 10vw;
+  margin-right: 6vw;
+}
+
+.square {
+  width: 11.75rem;
+  height: 7.5rem;
+  background-color: white;
+  margin: 1vw;
+  border-radius: 2.6041666666666665vw;
+  box-shadow: 0 20px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
+}
+
+
+
+#square2{
+ margin-top: 5rem;
+}
+
+#square3{
+  margin-top: -3rem;
+}
+
+#square4{
+  margin-top: 2rem;
+}
+
+.square img{
+  margin-left: -1rem;
+    margin-top: 0.5rem;
+    margin-bottom: -6rem;
+    width: 7rem;
+}
+
+img + p{
+  padding-right: 29rem;
+  margin-right: -26rem;
+  margin-left: 5rem;
+  margin-top: -1.5rem;
+}
+
+div#square3 img{
+  width: 5.75rem;
+  margin-left: 2.75rem;
+  margin-bottom: -5rem;
+  margin-top: 0rem;
+}
+
+div#square3 img + p{
+  margin-top: 4rem;
+  margin-left: 2.75rem;
+}
+
+div#square4 img{
+  width: 6.75rem;
+  margin-left: -1.25rem;
+  margin-bottom: -5rem;
+}
+
+div#square4 img + p{
+  margin-left: 4rem;
+}
+
+#section-2{
+  margin-top: -38vh;
+}
+
+#featured-videos {
+  display: inline-block;
+  color: white;
+  font-family: cursive, "Trebuchet MS";
+  font-weight: bold;
+  text-align: left;
+  font-size: 2rem;
+  border: 0.2vh;
+  margin-top: 0px;
+  margin-left: 4vw;
+  -webkit-text-stroke: 0.155763vh
+vh
+black;
+}
+div#slider{
+  height: 100%;
+  overflow-x: hidden;
+  text-align: center;
+  padding-top: 1vh;
+  margin-left: 2.5rem;
+}
+
+
+.csslider > ul {
+  position: relative;
+  width: 74.7083vw;
+  height: 21.6137vh;
+  z-index: 1;
+  font-size: 0px;
+  line-height: 0;
+  border: 1vh solid rgb(255, 255, 255);
+  margin: 0px auto;
+  padding: 0px;
+  overflow: hidden;
+  white-space: nowrap;
+  box-sizing: border-box;
 }
 }
+
+
+
