--- a/css/index.css
+++ b/css/index.css
@@ -143,14 +143,15 @@ button:hover {
  }
 
  #section-2{
-  background-color: #656565;
-  height: 62vh;
+  background-color: #302E2C;
+  height: 70vh;
+
  }
 
  #featured-videos{
   display: inline-block;
    color: white;
-   font-family: cursive, Trebuchet MS;
+   font-family: 'Passion One', cursive;
    font-weight: bold;
    text-align: left;
    font-size:  8.307372793354102vh;
@@ -524,7 +525,7 @@ div#square4 img + p{
   margin-top: 0px;
   margin-left: 4vw;
   -webkit-text-stroke: 0.155763vh
-vh
+
 black;
 }
 div#slider{
@@ -551,6 +552,34 @@ div#slider{
   box-sizing: border-box;
 }
 }
+h2{
+  font-family: 'Passion One', cursive;
+  font-size: 4rem;
+  float: right;
+  margin-top: -47rem;
+  margin-right: 7rem;
+  color: white;
+}
 
+
+#game-of-the-day{
+ float: right;
+ margin-top: -42rem;
+ margin-right: 4rem;
+}
+
+.line{
+  display: flex;
+  margin-left: 63%;
+  margin-top: -47.5rem;
+  width: 0.3rem;
+  height: 42rem;
+  background-color: white;
+
+}
+
+div.row a{
+  text-decoration: none;
+} 
 
 
